	* Added styles for default Separator block.
* Improvement: Better spacing with Image elements, that are linked and have full-size images.
* Fixed: Adding missing `base` key in `themeblvd_admin_module_caps` filtered array, so that the user capability of the Theme Bases admin page can be modified (see [tutorial](http://dev.themeblvd.com/tutorial/changing-user-role-access-for-admin-modules/)).
* Updated: FontAwesome to 5.4.

--------------------------------------------------------------

## 2.2.5 - 04/05/2018

* **Updated Theme Blvd framework to 2.7.5**
* Improvement: Better styling for password form on password-protected posts and pages.
* Fixed: Layout issues on password-protected custom layout pages, when password form is shown.
* Fixed: "Icon After Button Text" not working properly on buttons.
* Updated: FontAwesome to 5.0.9.

--------------------------------------------------------------

## 2.2.4 - 03/26/2018

* **Updated Theme Blvd framework to 2.7.4**
* Improvement: Navigational arrows now display with hero unit slider on mobile.
* Improvement: Added filter `themeblvd_icon`, which filters the final HTML output for each frontend Font Awesome icon instance.
* Improvement: Added filter `themeblvd_toggle_icons` to customize the icons used for opening and closing a toggle (see [usage example](http://dev.themeblvd.com/tutorial/customizing-font-awesome-icons/#toggles)).
* Improvement: Added filter `themeblvd_contact_bar_icon_name` to customize which icons are used in a contact bar (see [usage example](http://dev.themeblvd.com/tutorial/customizing-font-awesome-icons/#contact)).
* Improvement: Added filter `themeblvd_shopping_cart_icon_name` to customize the shopping cart icon used on both desktop and mobile (see [usage example](http://dev.themeblvd.com/tutorial/customizing-font-awesome-icons/#shopping-cart)).