@@ -8,6 +8,7 @@
 	* Added styles for default Separator block.
 * Improvement: Better spacing with Image elements, that are linked and have full-size images.
 * Fixed: Adding missing `base` key in `themeblvd_admin_module_caps` filtered array, so that the user capability of the Theme Bases admin page can be modified (see [tutorial](http://dev.themeblvd.com/tutorial/changing-user-role-access-for-admin-modules/)).
+* Removed: Removed outdated style-editor.css file.
 * Updated: FontAwesome to 5.4.
 
 --------------------------------------------------------------
